--- a/public/ees211/index.html
+++ b/public/ees211/index.html
@@ -65,12 +65,14 @@
 <p><a href="https://thiyangt.github.io/rworkbook/index.html">Exercise</a></p>
 <h2 id="week-3-21-july-2022">Week 3: 21 July 2022</h2>
 <p><a href="https://hellor.netlify.app/slides/l122021.html#1">Slides</a></p>
-<h2 id="week-4-28-july-2022">Week 4: 28 July 2022</h2>
-<p><a href="/ees211/regression/regression1.html">Slides - 3.1: Introduction to regression analysis</a></p>
-<p><a href="/ees211/regression/regression2.html">Slides - 3.2: Simple linear regression analysis</a></p>
-<h2 id="week-5">Week 5</h2>
+<h2 id="week-4-5-28-july-2022-29-july-2022">Week 4-5: 28 July 2022/ 29 July 2022</h2>
+<p><a href="/ees211/regression/regression1.html">Slides - 4.1: Introduction to regression analysis</a></p>
+<p><a href="/ees211/regression/regression2.html">Slides - 4.2: Simple linear regression analysis</a></p>
 <h2 id="week-6">Week 6</h2>
+<p><a href="/ees211/regression/regression3.html">Slides </a></p>
 <h2 id="week-7">Week 7</h2>
+<p><a href="/ees211/regression/regression4_ees.html">Slides </a></p>
+<p><a href="/ees211/regression/regression5_ees.html">Slides </a></p>
 <h2 id="week-8">Week 8</h2>
 <h2 id="week-9">Week 9</h2>
 <h2 id="week-10">Week 10</h2>
