--- a/public/ees211/index.html
+++ b/public/ees211/index.html
@@ -77,7 +77,7 @@
 <p><a href="/regression/regression7_anova.html">Slides </a></p>
 <p><a href="/regression/regression10_ees.html">Slides </a></p>
 <h2 id="week-9">Week 9</h2>
-<p><a href="/slides/ees211/clustering.html">Slides</a></p>
+<p><a href="/ees211/clustering.html">Slides</a></p>
 <h2 id="week-10">Week 10</h2>
 <h2 id="week-11">Week 11</h2>
 <h2 id="week-12">Week 12</h2>
