--- a/public/ees211/index.html
+++ b/public/ees211/index.html
@@ -73,15 +73,16 @@
 <h2 id="week-7">Week 7</h2>
 <p><a href="/regression/regression4_ees.html">Slides </a></p>
 <p><a href="/regression/regression5_ees.html">Slides </a></p>
-<h2 id="week-8">Week 8</h2>
+<h2 id="week-8-9">Week 8-9</h2>
 <p><a href="/regression/regression7_anova.html">Slides </a></p>
 <p><a href="/regression/regression10_ees.html">Slides </a></p>
-<h2 id="week-9">Week 9</h2>
+<h2 id="week-10-11">Week 10-11</h2>
 <p><a href="/ees211/clustering.html">Slides</a></p>
-<h2 id="week-10">Week 10</h2>
-<h2 id="week-11">Week 11</h2>
-<h2 id="week-12">Week 12</h2>
-<h2 id="week-13">Week 13</h2>
+<h2 id="week-12-14">Week 12-14</h2>
+<p><a href="/ees211/machine_learning.html">Slides</a></p>
+<h2 id="week-15">Week 15</h2>
+<p><a href="/ees211/poly.html">Slides</a></p>
+<p><a href="/ees211/co.pdf">Course outline</a></p>
 
     </div>
   </article>
